@@ -1,13 +1,13 @@
 /*
 	hwrcon.c
-	$Id: hwrcon.c,v 1.24 2010-01-11 18:48:19 sezero Exp $
+	$Id: hwrcon.c,v 1.25 2010-08-09 14:33:12 sezero Exp $
 
 	HWRCON 1.2 HexenWorld Remote CONsole
 	Idea based on RCon 1.1 by Michael Dwyer/N0ZAP (18-May-1998).
 	Made to work with HexenWorld using code from the HexenWorld
 	engine (C) Raven Software and ID Software.
 	Copyright (C) 1998 Michael Dwyer <mdwyer@holly.colostate.edu>
-	Copyright (C) 2006-2009 O. Sezer <sezero@users.sourceforge.net>
+	Copyright (C) 2006-2010 O. Sezer <sezero@users.sourceforge.net>
 
 	This program is free software; you can redistribute it and/or
 	modify it under the terms of the GNU General Public License
@@ -37,6 +37,10 @@
 
 #include "arch_def.h"
 #include "compiler.h"
+
+#define	COMPILE_TIME_ASSERT(name, x)	\
+	typedef int dummy_ ## name[(x) * 2 - 1]
+
 #include "net_sys.h"
 #include "qsnprint.h"
 #if defined(USE_HUFFMAN)
