@@ -1,6 +1,6 @@
 /*
 	hwterm.c
-	$Id: hwterm.c,v 1.30 2010-01-11 18:48:19 sezero Exp $
+	$Id: hwterm.c,v 1.31 2010-08-09 14:33:12 sezero Exp $
 
 	HWTERM 1.2 HexenWorld Remote Console Terminal
 	Idea based on QTerm 1.1 by Michael Dwyer/N0ZAP (18-May-1998).
@@ -8,7 +8,7 @@
 	engine (C) Raven Software and ID Software. Socket timeout code
 	taken from the XQF project.
 	Copyright (C) 1998 Michael Dwyer <mdwyer@holly.colostate.edu>
-	Copyright (C) 2006-2009 O. Sezer <sezero@users.sourceforge.net>
+	Copyright (C) 2006-2010 O. Sezer <sezero@users.sourceforge.net>
 
 	This program is free software; you can redistribute it and/or
 	modify it under the terms of the GNU General Public License
@@ -41,6 +41,10 @@
 
 #include "arch_def.h"
 #include "compiler.h"
+
+#define	COMPILE_TIME_ASSERT(name, x)	\
+	typedef int dummy_ ## name[(x) * 2 - 1]
+
 #include "net_sys.h"
 #include "qsnprint.h"
 #if defined(PLATFORM_UNIX)
